[gd_scene load_steps=5 format=3 uid="uid://c3g8y7x2h4oaa"]

[ext_resource type="Script" uid="uid://dnhl1fr6mtlm5" path="res://world/StartScreen/start_screen.gd" id="1_start"]
[ext_resource type="Texture2D" uid="uid://syohtkb3t3qk" path="res://graphics/asdf.png" id="2_7jabd"]
[ext_resource type="FontFile" uid="uid://cikeog0rd1xje" path="res://world/StartScreen/Game Paused DEMO.otf" id="2_o4cl2"]

[sub_resource type="LabelSettings" id="LabelSettings_7jabd"]
font = ExtResource("2_o4cl2")
font_size = 200

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_start")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 2560.0
offset_bottom = 1440.0
texture = ExtResource("2_7jabd")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 717.0
offset_top = 363.0
offset_right = 1843.0
offset_bottom = 683.0
theme_override_font_sizes/font_size = 48
text = "De-Bug"
label_settings = SubResource("LabelSettings_7jabd")
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="."]
custom_minimum_size = Vector2(0, 40)
anchors_preset = 0
offset_left = 1180.0
offset_top = 654.5
offset_right = 1380.0
offset_bottom = 694.5

[node name="StartButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 0
offset_left = 1173.0
offset_top = 818.0
offset_right = 1373.0
offset_bottom = 868.0
theme_override_font_sizes/font_size = 24
text = "Start Game"

[node name="OptionsButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 0
offset_left = 1173.0
offset_top = 872.0
offset_right = 1373.0
offset_bottom = 922.0
theme_override_font_sizes/font_size = 24
text = "Options"

[node name="QuitButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 0
offset_left = 1173.0
offset_top = 926.0
offset_right = 1373.0
offset_bottom = 976.0
theme_override_font_sizes/font_size = 24
text = "Quit"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
